--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script type="text/javascript" src="../assets/jquery-2.1.0.min.js"></script>
-    <script type="text/javascript" src="../assets/pd-fileutils.js"></script>
-    <script type="text/javascript" src="../../dist/webpd-latest.js"></script>
-    <script type="text/javascript" src="../assets/examples.js"></script>
+    <script type="text/javascript" src="assets/jquery-2.1.0.min.js"></script>
+    <script type="text/javascript" src="assets/pd-fileutils.js"></script>
+    <script type="text/javascript" src="pd/webpd-latest.js"></script>
+    <script type="text/javascript" src="assets/examples.js"></script>
 
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
     <link href='../assets/examples.css' rel='stylesheet' type='text/css'>
