--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <script type="text/javascript" src="assets/jquery-2.1.0.min.js"></script>
     <script type="text/javascript" src="assets/pd-fileutils.js"></script>
-    <script type="text/javascript" src="js/webpd-latest.js"></script>
+    <script type="text/javascript" src="js/webpd-latest.min.js"></script>
     <script type="text/javascript" src="assets/examples.js"></script>
 
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
