--- a/Site/index.html
+++ b/Site/index.html
@@ -3,6 +3,7 @@
 <head>
     <script src="js/jquery.js" type="text/javascript"></script>
     <script src="js/webpd.js" type="text/javascript"></script>
+    <script src="js/scripts.js" type="text/javascript"></script>
     <script >
  var patch
          $.get('patches/mypatche.pd', function(patchStr)   {
@@ -16,6 +17,7 @@
 <body>
 
 <img onclick="  Pd.start()" src="leonis.jpg">
+<img onclick="  Pd.send('freq', getRandomFreq(500))" src="leonis.jpg">
 
 
 
