--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script type="text/javascript" src="assets/pd-fileutils.js"></script>
     <script type="text/javascript" src="js/webpd-latest.min.js"></script>
     <script type="text/javascript" src="assets/examples.js"></script>
+    <script src="js/scripts.js" type="text/javascript"></script>
+
 
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
     <link href='assets/examples.css' rel='stylesheet' type='text/css'>
@@ -18,6 +20,8 @@
     
     <div id="pdfuNote">Patch rendered to SVG using <a href="https://github.com/sebpiq/pd-fileutils">pd-fileutils</a></div>
     <div id="svg"></div>
+
+    <img onclick="  Pd.send('freq', getRandomFreq(500))" src="leonis.jpg">
 
     <script type="text/javascript">
       webPdExamples.init()
