--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="assets/pd-fileutils.js"></script>
     <script type="text/javascript" src="js/webpd-latest.min.js"></script>
     <script type="text/javascript" src="assets/examples.js"></script>
-    <script src="js/scripts.js" type="text/javascript"></script>
+    <script src="js/scriptsPd.js" type="text/javascript"></script>
 
 
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
