--- a/Site/index.html
+++ b/Site/index.html
@@ -17,7 +17,7 @@
 <body>
 
 <img onclick="  Pd.start()" src="leonis.jpg">
-<img onclick="  Pd.send('freq', getRandomFreq(500))" src="leonis.jpg">
+<img onclick="  patch.send('freq', getRandomFreq(500))" src="leonis.jpg">
 
 
 
