Test send message format

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="pdfuNote">Patch rendered to SVG using <a href="https://github.com/sebpiq/pd-fileutils">pd-fileutils</a></div>
     <div id="svg"></div>
 
-    <img onclick="  patch.send('freq', [getRandomFreq(500)])" src="leonis.jpg">
+    <img onclick="  Pd.send('freq', [getRandomFreq(500)])" src="leonis.jpg">
 
     <script type="text/javascript">
       webPdExamples.init()
